--- a/style/game.css
+++ b/style/game.css
@@ -9,6 +9,17 @@ html, body {
   /*canvas{
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   }*/
+  .txt {
+    width: 100%;
+    color: white;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border-color: white;
+    border-radius: 25px;
+    box-sizing: border-box;
+    background:none;
+  }
   .button { /* Green */
       background: none;
       border-color: white;
@@ -16,7 +27,7 @@ html, body {
       padding: 15px 32px;
       text-align: center;
       text-decoration: none;
-      font-size: 20px;
+      font-size: 15px;
       display: inline-block;
       cursor: pointer;
       border-radius: 30px;
@@ -47,4 +58,21 @@ html, body {
     text-align: center;
     vertical-align: middle;
     display: none;
+  }
+  ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #d3d3d3;
+  }
+  :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+     color:    #d3d3d3;
+     opacity:  1;
+  }
+  ::-moz-placeholder { /* Mozilla Firefox 19+ */
+     color:    #d3d3d3;
+     opacity:  1;
+  }
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+     color:    #d3d3d3;
+  }
+  ::-ms-input-placeholder { /* Microsoft Edge */
+     color:    #d3d3d3;
   }
