--- a/style/game.css
+++ b/style/game.css
@@ -40,12 +40,12 @@ html, body {
     color: white;
   }
   .cover {
-    transform: translate(-50%, 0);
+    transform: translate(-50%, -50%);
     width: 300px;
     text-align: center;
     position: absolute;
     left: 50%;
-    bottom: 50%;
+    top: 50%;
     display:block;
   }
   .ui{
