--- a/style/game.css
+++ b/style/game.css
@@ -24,13 +24,14 @@ html, body {
       background: none;
       border-color: white;
       color: white;
-      padding: 15px 32px;
+      padding: 10px 20px;
       text-align: center;
       text-decoration: none;
-      font-size: 15px;
+      font-size: 100%;
       display: inline-block;
       cursor: pointer;
       border-radius: 30px;
+      width: 100%;
   }
   .button:hover {
       background-color: white;
@@ -41,7 +42,8 @@ html, body {
   }
   .cover {
     transform: translate(-50%, -50%);
-    width: 300px;
+    width: 30%;
+    min-width: 150px;
     text-align: center;
     position: absolute;
     left: 50%;
@@ -59,6 +61,12 @@ html, body {
     vertical-align: middle;
     display: none;
   }
+
+  .imgCover {
+      max-width: 100%;
+      height: auto;
+  }
+
   ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    #d3d3d3;
   }
