--- a/style/game.css
+++ b/style/game.css
@@ -40,7 +40,7 @@ html, body {
   .title {
     color: white;
   }
-  .cover {
+  .menuPlay {
     transform: translate(-50%, -50%);
     width: 30%;
     min-width: 150px;
@@ -49,8 +49,17 @@ html, body {
     left: 50%;
     top: 50%;
     display:block;
+    color: #fff;
   }
-  .ui{
+
+  .gameOver {
+    display : none;
+  }
+
+  .play {
+    display : block;
+  }
+  /*.ui{
     position: absolute;
     left: 50%;
     top: 50%;
@@ -60,7 +69,7 @@ html, body {
     text-align: center;
     vertical-align: middle;
     display: none;
-  }
+  }*/
 
   .imgCover {
       max-width: 100%;
