--- a/style/game.css
+++ b/style/game.css
@@ -41,13 +41,15 @@ html, body {
     color: white;
   }
   .menuPlay {
-    transform: translate(-50%, -50%);
+    /*transform: translate(-50%, -50%);*/
     width: 30%;
     min-width: 150px;
     text-align: center;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    margin: auto;
+    margin-top: 5%;
+    /*left: 50%;
+    top: 50%;*/
     display:block;
     color: #fff;
   }
