--- a/style/game.css
+++ b/style/game.css
@@ -1,10 +1,12 @@
 html {
   height: 100%;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
 html, body {
     padding: 0; margin: 0;
     overflow:hidden;
+}
+body{
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
   /*canvas{
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
@@ -40,22 +42,19 @@ html, body {
   .title {
     color: white;
   }
-  .menuPlay {
-    /*transform: translate(-50%, -50%);*/
-    width: 30%;
-    min-width: 150px;
+
+  .cover{
+    background: none;
     text-align: center;
-    position: absolute;
-    margin: auto;
-    margin-top: 5%;
-    /*left: 50%;
-    top: 50%;*/
-    display:block;
-    color: #fff;
+    color: white;
   }
 
   .gameOver {
     display : none;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
   }
 
   .play {
