--- a/style/game.css
+++ b/style/game.css
@@ -118,6 +118,9 @@ body{
     color: white;
   }
 
+  .diagram{
+    background-color: white;
+  }
   .pause {
     top: 0;
     position: absolute;
